JumpScript/tests/baselines/reference/restElementMustBeLast.errors.txt
tests/cases/conformance/types/rest/restElementMustBeLast.jump(1,9): error TS2462: A rest element must be last in a destructuring pattern.
tests/cases/conformance/types/rest/restElementMustBeLast.jump(2,2): error TS2462: A rest element must be last in a destructuring pattern.


==== tests/cases/conformance/types/rest/restElementMustBeLast.jump (2 errors) ====
    var [...a, x] = [1, 2, 3];  // Error, rest must be last element
            ~
!!! error TS2462: A rest element must be last in a destructuring pattern.
    [...a, x] = [1, 2, 3];      // Error, rest must be last element
     ~~~~
!!! error TS2462: A rest element must be last in a destructuring pattern.
    